Fix text overflows

--- a/app/features/sendouq/q.css
+++ b/app/features/sendouq/q.css
@@ -155,6 +155,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  max-width: 7.5rem;
 }
 
 .q__group-member__tier {
