--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -1350,11 +1350,11 @@ dialog::backdrop {
 }
 
 .chat__messages {
-  padding: var(--s-2) 0 0 0;
+  padding: var(--s-2-5) 0 0 0;
   display: flex;
   flex-direction: column;
   gap: var(--s-2);
-  height: 270px;
+  height: 310px;
   overflow-y: auto;
 }
 
@@ -1368,6 +1368,10 @@ dialog::backdrop {
   font-weight: var(--semi-bold);
   font-size: var(--fonts-sm);
   color: var(--chat-user-color);
+  max-width: 130px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .chat__message__time {
